# LangLiveStreamerSDKAndroid

./: README.md
SCDemo/: .gitignore  build.gradle  gradle.properties  settings.gradle
SCDemo/AgoraRTCLib/: build.gradle
SCDemo/AgoraRTCLib/src/main/: AndroidManifest.xml
SCDemo/LangGPUImageLib/: build.gradle  proguard-rules.pro
SCDemo/LangImageAnimLib/: build.gradle
SCDemo/LangStreamer1Kit/: build.gradle  proguard-rules.pro
SCDemo/LangStreamer2Kit/: build.gradle  proguard-rules.pro
SCDemo/SenseMeLibrary/: build.gradle
SCDemo/app/: build.gradle
SCDemo/app/libs/: LangImageAnimLib_1.0.1.aar  LangStreamer1Kit_1.9.0.aar  LangStreamer1Kit_1.9.1.aar  LangStreamer2Kit_0.9.1.aar  LangStreamer2Kit_1.0.0.aar  yfGraphicBuffer_1.0.5.aar
SCDemo/gradle/wrapper/: gradle-wrapper.properties
SCDemo/keystore/: scdemo.jks  密码.txt
SCDemo/yfGraphicBuffer/: .gitignore  CMakeLists.txt  build.gradle
SCDemo/yfGraphicBuffer/src/main/: AndroidManifest.xml
SCDemo/yfGraphicBuffer/src/main/java/com/yunfan/graphicbuffer/: GraphicBufferWrapper.java
SCDemo/yfGraphicBuffer/src/main/java/com/yunfan/graphicbuffer/utils/: VersionUtil.java
SCDemo/yfGraphicBuffer/src/main/jni/: GraphicHwBuffer.mk  GraphicHwBufferImpl.cpp  GraphicHwBufferImpl.h  GraphicJavaImpl.cpp  GraphicJavaImpl.h  GraphicOnNative.cpp  GraphicOnNative.h  IGraphicBuffer.h  j4a_GraphicBuffer.c  j4a_GraphicBuffer.h  j4a_GraphicBufferWrapper.c  j4a_GraphicBufferWrapper.h  j4a_Parcel.c  j4a_Parcel.h  j4a_base.c  j4a_base.h
SCDemo/yfGraphicBuffer/src/main/res/values/: strings.xml
(+378 files in other folders)
